force-app/main/default/objects/DeploymentEvent__e/DeploymentEvent__e.object-meta.xml
<CustomObject>
    <label>Deployment Event</label>
    <pluralLabel>DeploymentEvent</pluralLabel>
</CustomObject>