force-app/main/default/objects/DeploymentEvent__e/fields/CompletedDate__c.field-meta.xml
<CustomField>
    <fullName>CompletedDate__c</fullName>
    <label>Completed Date</label>
    <type>DateTime</type>
</CustomField>