force-app/main/default/objects/DeploymentEvent__e/fields/DeploymentId__c.field-meta.xml
<CustomField>
    <fullName>DeploymentId__c</fullName>
    <label>Deployment ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>